tests/config_file_extensions/config_file_extensions.exp
Error --------------------------------------------------------- test.js.es6:6:10

Error: test.js.es6:6
  6:   return x * 10;
              ^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
    9: foo('Hello, world!');
           ^^^^^^^^^^^^^^^ [1]: string


Found 1 error
